...
            source: .youtube,
            youtubeVideoId: "7hnP1nmk0FU",
            thumbnailUrl: "https://img.youtube.com/vi/7hnP1nmk0FU/hqdefault.jpg",
            categoryId: "music"
        ),
        RadioTrack(
            title: "Beatle Beast",
            artist: "Tomato Bird",
            source: .youtube,
            youtubeVideoId: "aLrgbWPfZ80",
            thumbnailUrl: "https://img.youtube.com/vi/aLrgbWPfZ80/hqdefault.jpg",
            categoryId: "music"
        ),
...
